hphp/hack/test/typecheck/aktuple/unify_ok.php.exp
File "unify_ok.php", line 14, characters 12-16:
Invalid argument (Typing[4110])
File "unify_ok.php", line 3, characters 19-21:
Expected num
File "unify_ok.php", line 11, characters 23-27:
But got string
